--- a/.envrc
+++ b/.envrc
@@ -1,4 +1,5 @@
 export SRCROOT=$(pwd)
-export ARCH=armv6
-export DEBUG=rel
-PATH_add $SRCROOT/$ARCH$VARIANT$DEBUG/tools/bin
+export ARCH=x86
+export VARIANT=
+export DEBUG=dbg
+export "PATH=$PWD/.bin:$SRCROOT/$ARCH$VARIANT$DEBUG/tools/bin:$PATH"
