--- a/.envrc
+++ b/.envrc
@@ -3,3 +3,4 @@ export ARCH=x86
 export VARIANT=
 export DEBUG=dbg
 export "PATH=$PWD/.bin:$SRCROOT/$ARCH$VARIANT$DEBUG/tools/bin:$PATH"
+export SDKROOT=$(xcrun --show-sdk-path)
